# x64dbg-automate-pyclient

./: .gitignore  .mcp.json  404.html  CLAUDE.md  LICENSE  README.md  TODO  index.html  mkdocs.yml  objects.inv  pyproject.toml
.claude/: settings.local.json
.github/workflows/: gh-pages.yml
api/annotations/: index.html
api/assembler-disassembler/: index.html
api/breakpoints/: index.html
api/commands/: index.html
api/debug-control/: index.html
api/gui/: index.html
api/memory-control/: index.html
api/registers-expressions/: index.html
api/session-control/: index.html
api/settings/: index.html
docs/: index.md  installation.md  mcp-server.md  quickstart.md  sessions.md
docs/api/: annotations.md  assembler-disassembler.md  breakpoints.md  (+8 more)
docs_custom/: base.html
examples/: assemble_and_disassemble.py  attach.py  breakpoints.py  debug_control.py  expressions_and_registers.py  hello64.py  memory_control.py  reference_view.py  sessions.py
installation/: index.html
mcp-server/: index.html
quickstart/: index.html
search/: search_index.json
site/: index.html
tests/: Dockerfile.functional  conftest.py  run_functional_tests.ps1  test_connect.py  test_connect_config.py  test_dbg_commands.py  test_events.py  test_functional_remote.py  test_hla_commands.py  test_mcp_server.py  test_xauto_commands.py
x64dbg_automate/: __init__.py  client_base.py  commands_xauto.py  events.py  hla_xauto.py  mcp_server.py  models.py  win32.py
x64dbg_automate_pyclient/: __init__.py  client_base.py  commands_xauto.py  events.py  hla_xauto.py  models.py  win32.py
(+12 files in other folders)
